# baresip

cmake/: modules.cmake
modules/pcmfile/: CMakeLists.txt  pcmfile.c
